# DroidSync

src/: CMakeLists.txt  DroidSync.cpp  DroidSync.h  DroidSync.ui  Project.txt  include.txt  main.cpp
